--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,5 +1,5 @@
 ---
-title: Protoship
+title: Yashwin Shetty
 ---
 
 <!DOCTYPE html>
@@ -39,8 +39,8 @@ title: Protoship
     property="og:description">
   <meta content="website" property="og:type">
   <meta content="summary" name="twitter:card">
-  <meta content="Protoship" name="twitter:creator">
-  <meta content="Protoship Codegen" name="twitter:title">
+  <meta content="Yashwin Shetty" name="twitter:creator">
+  <meta content="Yashwin Shetty" name="twitter:title">
   <meta
     content="Yashwin Shetty is a sports scientist and strength & conditioning coach based out of Bangalore, India"
     name="twitter:description">
