--- a/src/_includes/layouts/main.njk
+++ b/src/_includes/layouts/main.njk
@@ -1,5 +1,5 @@
 ---
-title: Protoship
+title: Yashwin Shetty
 layout: layouts/base.njk
 ---
 
@@ -10,5 +10,4 @@ layout: layouts/base.njk
   {% include "site_header.njk" %}
 </div>
 {{ content | safe }}
-{% include "site_footer.njk" %}
 </body>
